--- a/extension-build/manifest.json
+++ b/extension-build/manifest.json
@@ -21,8 +21,7 @@
     "default_title": "Time Transfer"
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icon128.png",
+    "128": "icon128.png"
   }
 }
